--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -10,7 +10,7 @@
     <style name="text" parent="Widget.AppCompat.EditText">
         <item name="colorControlNormal">#f5f6f7</item>
         <item name="android:textColor">#f5f6f7</item>
-        <item name="android:textColorHint">#f5f6f7</item>
+        <item name="android:textColorHint">#cfcfcf</item>
     </style>
 
 </resources>
