--- a/app/src/main/res/layout/create_account.xml
+++ b/app/src/main/res/layout/create_account.xml
@@ -6,24 +6,13 @@
     android:layout_height="match_parent"
     android:background="#2c3e50">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scaleType="fitXY"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/author_theme" />
-
     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/profile_image"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="32dp"
+        android:clickable="true"
+        android:paddingBottom="16dp"
         android:src="@drawable/profile"
         app:civ_border_color="#f5f6f7"
         app:civ_border_width="2dp"
@@ -37,14 +26,14 @@
         android:id="@+id/linear"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
         android:gravity="center"
         android:orientation="horizontal"
         android:weightSum="1"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profile_image">
 
@@ -54,7 +43,7 @@
             android:layout_height="36dp"
             android:layout_weight="0.1"
             app:layout_constraintStart_toStartOf="parent"
-            app:srcCompat="@drawable/ic_account" />
+            app:srcCompat="@drawable/ic_email" />
 
         <EditText
             android:id="@+id/authorization_email"
@@ -64,7 +53,7 @@
             android:layout_marginStart="8dp"
             android:layout_weight="0.9"
             android:ems="10"
-            android:hint="Enter your username"
+            android:hint="Enter your email"
             android:inputType="text|textEmailAddress"
             android:theme="@style/text"
             app:layout_constraintEnd_toEndOf="parent"
@@ -76,13 +65,14 @@
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
         android:gravity="center"
         android:orientation="horizontal"
         android:weightSum="1"
-        app:layout_constraintBottom_toTopOf="@+id/authorization_confirm"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linear">
 
@@ -95,7 +85,7 @@
             app:srcCompat="@drawable/ic_lock" />
 
         <EditText
-            android:id="@+id/authorization_password"
+            android:id="@+id/create_account_password"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
@@ -112,40 +102,86 @@
 
     </LinearLayout>
 
-
-    <Button
-        android:id="@+id/authorization_confirm"
+    <LinearLayout
+        android:id="@+id/linearLayout5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:weightSum="1"
+        app:layout_constraintBottom_toTopOf="@+id/create_account_confirm"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
+
+        <ImageView
+            android:id="@+id/imageVie445"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_weight="0.1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/confirm_password" />
+
+        <EditText
+            android:id="@+id/create_account_repeat_password"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_weight="0.9"
+            android:ems="10"
+            android:hint="Confirm your password"
+            android:inputType="text|textEmailAddress"
+            android:theme="@style/text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imageView2"
+            app:layout_constraintTop_toBottomOf="@+id/profile_image" />
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/create_account_confirm"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
         android:background="#1bbc9b"
-        android:text="Log in"
+        android:text="Create"
+        android:textColor="#f5f6f7"
+        android:textSize="18dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView"
+        app:layout_constraintEnd_toStartOf="@+id/create_account_cancel"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/create_account_cancel"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
+        android:background="#1bbc9b"
+        android:text="Cancel"
         android:textColor="#f5f6f7"
         android:textSize="18dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+        app:layout_constraintStart_toEndOf="@+id/create_account_confirm" />
 
-
-    <TextView
-        android:id="@+id/authorization_sign_up"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_marginTop="8dp"
-        android:text="@string/new_account"
-        android:textColor="#f5f6f7"
-        android:textSize="16dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
 
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+
+        app:srcCompat="@drawable/author_theme" />
 
 </android.support.constraint.ConstraintLayout>
