--- a/app/src/main/res/layout/aurhorization.xml
+++ b/app/src/main/res/layout/aurhorization.xml
@@ -65,7 +65,7 @@
             android:layout_weight="0.9"
             android:ems="10"
             android:hint="Enter your username"
-            android:inputType="text|textEmailAddress"
+            android:inputType="textEmailAddress"
             android:theme="@style/text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView2"
@@ -103,7 +103,7 @@
             android:layout_weight="0.9"
             android:ems="10"
             android:hint="Enter your password"
-            android:inputType="text|textEmailAddress"
+            android:inputType="text|textPassword"
             android:theme="@style/text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView2"
@@ -121,7 +121,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
-        android:background="#1bbc9b"
+        android:background="@drawable/primary_btn_selector"
         android:text="Log in"
         android:textColor="#f5f6f7"
         android:textSize="18dp"
