--- a/app/src/main/res/layout/activity_categorie_detail.xml
+++ b/app/src/main/res/layout/activity_categorie_detail.xml
@@ -140,6 +140,7 @@
                 android:inputType="textMultiLine" />
         </LinearLayout>
         <CheckBox
+            android:id="@+id/vLocationCheckBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layoutDirection="rtl"
