--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -47,6 +47,7 @@
         android:text="First name"
         android:textSize="24sp"
         android:inputType="none"
+        android:focusable="false"
         app:layout_constraintBottom_toBottomOf="@+id/vLastName"
         app:layout_constraintEnd_toStartOf="@+id/vLastName"
         app:layout_constraintHorizontal_bias="0.5"
@@ -61,6 +62,7 @@
         android:layout_marginTop="8dp"
         android:text="Last name"
         android:inputType="none"
+        android:focusable="false"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/vPrimaryBtn"
         app:layout_constraintEnd_toEndOf="parent"
