--- a/app/src/main/res/layout/create_account.xml
+++ b/app/src/main/res/layout/create_account.xml
@@ -122,7 +122,7 @@
             android:layout_weight="0.9"
             android:ems="10"
             android:hint="Enter your password"
-            android:inputType="text|textEmailAddress"
+            android:inputType="textPassword"
             android:theme="@style/text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView2"
@@ -164,7 +164,7 @@
             android:layout_weight="0.9"
             android:ems="10"
             android:hint="Confirm your password"
-            android:inputType="text|textEmailAddress"
+            android:inputType="textPassword"
             android:theme="@style/text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView2"
