--- a/app/src/main/res/layout/activity_categorie_detail.xml
+++ b/app/src/main/res/layout/activity_categorie_detail.xml
@@ -7,7 +7,7 @@
     android:animateLayoutChanges="true">
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/categorieAvatar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -16,10 +16,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/ic_launcher" />
+        app:srcCompat="@mipmap/ic_launcher"
+        android:tint="@color/colorAccent"/>
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/categorieName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -27,11 +28,12 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:gravity="center"
-        android:inputType="textPersonName"
+        android:inputType="none"
+        android:focusable="false"
         android:text="Name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+        app:layout_constraintTop_toBottomOf="@+id/categorieAvatar" />
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
@@ -58,7 +60,7 @@
         android:text="Transactions"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintTop_toBottomOf="@+id/categorieName" />
 
     <android.support.v7.widget.CardView
         android:id="@+id/vAddTransaction"
