--- a/app/src/main/res/layout/activity_categorie_detail.xml
+++ b/app/src/main/res/layout/activity_categorie_detail.xml
@@ -119,7 +119,8 @@
                 android:id="@+id/vSum"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.6"/>
+                android:layout_weight="0.6"
+                android:inputType="number"/>
         </LinearLayout>
 
 
