--- a/app/src/main/res/layout/activity_categorie_detail.xml
+++ b/app/src/main/res/layout/activity_categorie_detail.xml
@@ -167,9 +167,24 @@
         android:id="@+id/vList"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
         android:padding="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/vDelete"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/vAddTransaction" />
+
+    <TextView
+        android:id="@+id/vDelete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Delete this category"
+        android:padding="4dp"
+        android:layout_margin="8dp"
+        android:background="@drawable/red_round_stroke"
+        android:textColor="@color/colorError"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
