--- a/app/src/main/res/layout/item_category_icon.xml
+++ b/app/src/main/res/layout/item_category_icon.xml
@@ -1,12 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     app:contentPadding="1dp">
 
     <ImageView
-        android:layout_width="match_parent"
+        android:id="@+id/vIcon"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:src="@mipmap/ic_launcher"/>
-</android.support.v7.widget.CardView>
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:src="@mipmap/ic_launcher"
+        android:tint="@color/colorAccent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/vChecked"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:tint="@color/colorAccent"
+        android:background="@drawable/accent_circle"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/vIcon"
+        app:layout_constraintEnd_toEndOf="@+id/vIcon"
+        app:layout_constraintStart_toEndOf="@+id/vIcon"
+        app:layout_constraintTop_toTopOf="@+id/vIcon"
+        app:srcCompat="@drawable/ic_check" />
+</android.support.constraint.ConstraintLayout>
